Benchmark ITR-05: ProgressIndicator, 200x20
NOTE: the animation runs by far the smoothes with `winit-software` backend

Change-Id: Iee945bac3242a0246c4c96bb25aa5cf058d266f7

--- a/Cross.toml
+++ b/Cross.toml
@@ -5,7 +5,7 @@ context = "."
 [build.env]
 passthrough = [
     "SLINT_NO_QT",
-    "SLINT_STYLE",
+    "SLINT_STYLE=fluent-dark",
     "SLINT_TEST_FILTER",
     "SLINT_INTERPRETER_ERROR_WHITELIST",
 ]
