--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 
 [dependencies]
 slint = "1.6"
+sysinfo = "0.30.12"
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 slint = { version = "1.6", features = ["backend-linuxkms-noseat", "renderer-skia"] }
