--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,14 @@ rand = "0.8.5"
 rumqttc = "0.24.0"
 rusttype = "0.9.3" # potentially unused
 sysinfo = "0.32.0"
-slint = "1.8.0"
-#slint = { git = "https://github.com/slint-ui/slint.git", features = ["backend-linuxkms-noseat", "backend-winit", "renderer-skia"] }
+clap = { version = "4.5.16", features = ["derive"] }
+serde_json = "1.0.138"
+serde = "1.0.194"
+
+# slint = "1.8.0"
+# slint = { git = "https://github.com/slint-ui/slint.git", features = ["backend-linuxkms-noseat", "backend-winit", "renderer-skia"] }
+slint = { git = "https://github.com/slint-ui/slint.git", branch="master", features = ["backend-linuxkms-noseat", "backend-winit", "renderer-skia"] }
+# slint = { git = "https://github.com/slint-ui/slint.git" }
 #slint = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" }
 
 #[target.'cfg(target_arch = "aarch64")'.dependencies]
@@ -27,8 +33,8 @@ slint = "1.8.0"
 #slint = { version = "1.8.0", features = ["backend-linuxkms-noseat", "renderer-skia"] }
 
 [build-dependencies]
-slint-build = "1.8.0"
-#slint-build = { git = "https://github.com/slint-ui/slint.git" }
+# slint-build = "1.8.0"
+slint-build = { git = "https://github.com/slint-ui/slint.git" }
 #i-slint-compiler = { git = "https://github.com/slint-ui/slint.git" }
 #slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" }
 #i-slint-compiler = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" }
