--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,27 +20,7 @@ sysinfo = "0.32.0"
 clap = { version = "4.5.16", features = ["derive"] }
 serde_json = "1.0.138"
 serde = "1.0.194"
-
-# slint = "1.8.0"
-# slint = { git = "https://github.com/slint-ui/slint.git", features = ["backend-linuxkms-noseat", "backend-winit", "renderer-skia"] }
-slint = { git = "https://github.com/slint-ui/slint.git", branch="master", features = ["backend-linuxkms-noseat", "backend-winit", "renderer-skia"] }
-# slint = { git = "https://github.com/slint-ui/slint.git" }
-#slint = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" }
-
-#[target.'cfg(target_arch = "aarch64")'.dependencies]
-#slint = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440", default-features = false, features = ["renderer-software", "backend-winit", "compat-1-2"] } # recommended option by slint
-#slint = { git = "https://github.com/slint-ui/slint.git", features = ["backend-linuxkms-noseat", "backend-winit", "renderer-skia"] }
-#slint = { version = "1.8.0", features = ["backend-linuxkms-noseat", "renderer-skia"] }
+slint = { version = "1.10", features = ["backend-linuxkms-noseat", "backend-winit", "renderer-skia"] }
 
 [build-dependencies]
-# slint-build = "1.8.0"
-slint-build = { git = "https://github.com/slint-ui/slint.git" }
-#i-slint-compiler = { git = "https://github.com/slint-ui/slint.git" }
-#slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" }
-#i-slint-compiler = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" }
-
-#[target.'cfg(target_arch = "aarch64")'.build-dependencies]
-#i-slint-compiler = { git = "https://github.com/slint-ui/slint.git" }
-# enable signed distance fields for glyphs
-#i-slint-compiler = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440", features = ["embed-glyphs-as-sdf"] } # recommended option by slint
-#i-slint-compiler = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" } # only for testing
+slint-build = "1.10"
